--- a/templates/base.html
+++ b/templates/base.html
@@ -73,32 +73,32 @@ h1, h2, h3, h4 {
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span> City Map <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li role="presentation" class="dropdown-header">Canada</li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="montreal/map" onclick='loading();'>Montréal</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="toronto/map" onclick='loading();'>Toronto</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="vancouver/map" onclick='loading();'>Vancouver</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/montreal/map" onclick='loading();'>Montréal</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/toronto/map" onclick='loading();'>Toronto</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/vancouver/map" onclick='loading();'>Vancouver</a></li>
                     <li role="presentation" class="dropdown-header">USA East Coast</li>
-                    <li role="presentation"><a role="menuitem" tjabindex="-1" href="newyork/map" onclick='loading();'>New York</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="washingtondc/map" onclick='loading();'>D.C.</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="philadelphia/map" onclick='loading();'>Philadelphia</a></li>
+                    <li role="presentation"><a role="menuitem" tjabindex="-1" href="/newyork/map" onclick='loading();'>New York</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/washingtondc/map" onclick='loading();'>D.C.</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/philadelphia/map" onclick='loading();'>Philadelphia</a></li>
                     <li role="presentation" class="dropdown-header">USA West Coast</li>
-                    <li role="presentation"><a role="menuitem" tjabindex="-1" href="sanfrancisco/map" onclick='loading();'>San Francisco</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="seattle/map" onclick='loading();'>Seattle</a></li>
+                    <li role="presentation"><a role="menuitem" tjabindex="-1" href="/sanfrancisco/map" onclick='loading();'>San Francisco</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/seattle/map" onclick='loading();'>Seattle</a></li>
                   </ul>
                 </li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span> City Listings <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li role="presentation" class="dropdown-header">Canada</li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="montreal" onclick='loading();'>Montréal</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="toronto"  onclick='loading();'>Toronto</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="vancouver" onclick='loading();'>Vancouver</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/montreal" onclick='loading();'>Montréal</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/toronto"  onclick='loading();'>Toronto</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/vancouver" onclick='loading();'>Vancouver</a></li>
                     <li role="presentation" class="dropdown-header">USA East Coast</li>
-                    <li role="presentation"><a role="menuitem" tjabindex="-1" href="newyork" onclick='loading();'>New York</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="washingtondc" onclick='loading();'>D.C.</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="philadelphia" onclick='loading();'>Philadelphia</a></li>
+                    <li role="presentation"><a role="menuitem" tjabindex="-1" href="/newyork" onclick='loading();'>New York</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/washingtondc" onclick='loading();'>D.C.</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/philadelphia" onclick='loading();'>Philadelphia</a></li>
                     <li role="presentation" class="dropdown-header">USA West Coast</li>
-                    <li role="presentation"><a role="menuitem" tjabindex="-1" href="sanfrancisco" onclick='loading();'>San Francisco</a></li>
-                    <li role="presentation"><a role="menuitem" tabindex="-1" href="seattle" onclick='loading();'>Seattle</a></li>
+                    <li role="presentation"><a role="menuitem" tjabindex="-1" href="/sanfrancisco" onclick='loading();'>San Francisco</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/seattle" onclick='loading();'>Seattle</a></li>
                   </ul>
                 </li>
               </ul>
