--- a/templates/base.html
+++ b/templates/base.html
@@ -131,7 +131,9 @@ h1, h2, h3, h4 {
     {% block jumbo %}
 
     {% endblock %}
-    <div id='loading'><img class="img-responsive center-block"
+
+    <div id='loading'><br><br><br><br><br><br><br>
+      <img class="img-responsive center-block"
         src='/static/img/loading.gif' /></div>
 
     <div class="container page" id='content'>
