--- a/templates/base.html
+++ b/templates/base.html
@@ -105,7 +105,7 @@ h1, h2, h3, h4 {
               <ul class="nav navbar-nav navbar-right">
                 <form class="navbar-form navbar-left form-inline" role="search" action="{{ url_for('me')}}" method='post'>
                   <div class="form-group">
-                    <input type="text" name='address' class="form-control" placeholder="5880 Rue Chambord, Montreal">
+                    <input type="text" name='address' class="form-control" placeholder="3635 Goutte d'Or, Montreal">
                   </div>
                   <div class="form-group">
                     <select class="form-control" id="city" name='location'>
