nav style is up and running

--- a/static/css/map.css
+++ b/static/css/map.css
@@ -1,3 +1,10 @@
 iframe {
   border: none;
 }
+
+
+.navbar-default {
+  background-color: #52adda;
+  border-color: #428aae;
+  background-image: none;
+}
