readme and legend bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,14 +33,15 @@
         you will find something near you worth giving a new home.
              </p>
              <p>The Treasure Map requires the precise name of the stuff's city, without spaces, in order for the url to work -- it must
-               conform to Craigslist's URL. <b>New York is then newyork</b>.
-               This may obfuscate the city's coordinates, but many cities should work 'out of the box'(likely those with one word names).
+               conform to Craigslist's URL. <b>New York is then newyork</b>. Many cities should work 'out of the box'
+               (likely those with one word names).
                Currently a handful of cities have been tested, like Montreal, Toronto, Philly and New York. Try: <a href="/washingtondc">D.C.</a> or somewhere random.
+               <br>
                To try a city not listed on the navigation menu, simply enter the city name after the url (treasure.plyp.org).</p>
 
-              <p>I hope you find this treasure map both useful and efficient. Click <a href="https://github.com/polypmer/treasure-map">
+              <p>Click <a href="https://github.com/polypmer/treasure-map">
                 here</a> for the website source code or <a href="https://github.com/polypmer/freestuff-bot">here</a>
-                for the freestuff-bot standalone. This treasure map is written in Python 3 using the Flask framework among other packages.
+                for the freestuff-bot script. This treasure map is written in Python 3 using the Flask framework.
                 <br>
               Email Fenimore, the author, here:<br>
               fenimore.love(at)workingagenda.com</p>
@@ -57,11 +58,6 @@
                 <li>treasure.plyp.org/location/map/quantity</li>
               </ul>
                 </p>
-                <h3 class="section-heading">Planned Features and Bugs</h3>
-                <ul>
-                  <li>Menu doesn't work in the map</li>
-                </ul>
-
                 <h3>Disclaimer</h3>
                 <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
           IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
