--- a/templates/map.html
+++ b/templates/map.html
@@ -20,7 +20,7 @@ font-family: 'IM Fell English', serif;
     <div class="col-md-8">
     </div>
     <div class="col-md-4">
-      <div class="panel panel-success" style='width:100%'>
+      <div class="panel panel-success" style='width:100%;margin-top:20%'>
         <div class="panel-heading">
           <div class='panel-title text-center' style='padding:5px;'>
             Treasures of {{ location.title() }}
