--- a/templates/base.html
+++ b/templates/base.html
@@ -143,7 +143,7 @@ h1, h2, h3, h4 {
         <hr>
         {% block footer %}
         <footer class="footer">
-            <p>Treasure Map | 2015</p>
+            <p>Treasure Map | 2015-2016</p>
         </footer>
         {% endblock %}
     </div>
