--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,25 @@
               free stuff postings by distance.</b><br>
                Remember, its Distance is directly
               related to its value.</p>
+              <div class="dropdown">
+                <a href="#" class="dropdown-toggle dropdown-welcome" data-toggle="dropdown"
+                  role="button" aria-haspopup="true" aria-expanded="false">
+                  <span class="glyphicon glyphicon-globe" aria-hidden="true">
+                  </span> Try Your City <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li role="presentation" class="dropdown-header">Canada</li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="/montreal/map" onclick='loading();'>Montréal</a></li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="/toronto/map" onclick='loading();'>Toronto</a></li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="/vancouver/map" onclick='loading();'>Vancouver</a></li>
+                  <li role="presentation" class="dropdown-header">USA East Coast</li>
+                  <li role="presentation"><a role="menuitem" tjabindex="-1" href="/newyork/map" onclick='loading();'>New York</a></li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="/washingtondc/map" onclick='loading();'>D.C.</a></li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="/philadelphia/map" onclick='loading();'>Philadelphia</a></li>
+                  <li role="presentation" class="dropdown-header">USA West Coast</li>
+                  <li role="presentation"><a role="menuitem" tjabindex="-1" href="/sanfrancisco/map" onclick='loading();'>San Francisco</a></li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="/seattle/map" onclick='loading();'>Seattle</a></li>
+                </ul>
+              </div>
       </div>
     </div>
   </div>
