added some cities

--- a/templates/base.html
+++ b/templates/base.html
@@ -80,9 +80,15 @@ h1, h2, h3, h4 {
                     <li role="presentation"><a role="menuitem" tjabindex="-1" href="/newyork/map" onclick='loading();'>New York</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/washingtondc/map" onclick='loading();'>D.C.</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/philadelphia/map" onclick='loading();'>Philadelphia</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/boston/map" onclick='loading();'>Boston</a></li>
+                    <li role="presentation" class="dropdown-header">USA No Coast</li>
+                    <li role="presentation"><a role="menuitem" tjabindex="-1" href="/chicago/map" onclick='loading();'>Chicago</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/phoenix/map" onclick='loading();'>Phoenix</a></li>
                     <li role="presentation" class="dropdown-header">USA West Coast</li>
                     <li role="presentation"><a role="menuitem" tjabindex="-1" href="/sanfrancisco/map" onclick='loading();'>San Francisco</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/seattle/map" onclick='loading();'>Seattle</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/portland/map" onclick='loading();'>Portland</a></li>
+
                   </ul>
                 </li>
                 <li class="dropdown">
@@ -96,9 +102,15 @@ h1, h2, h3, h4 {
                     <li role="presentation"><a role="menuitem" tjabindex="-1" href="/newyork" onclick='loading();'>New York</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/washingtondc" onclick='loading();'>D.C.</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/philadelphia" onclick='loading();'>Philadelphia</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/boston" onclick='loading();'>Boston</a></li>
+                    <li role="presentation" class="dropdown-header">USA No Coast</li>
+                    <li role="presentation"><a role="menuitem" tjabindex="-1" href="/chicago" onclick='loading();'>Chicago</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/phoenix" onclick='loading();'>Phoenix</a></li>
                     <li role="presentation" class="dropdown-header">USA West Coast</li>
                     <li role="presentation"><a role="menuitem" tjabindex="-1" href="/sanfrancisco" onclick='loading();'>San Francisco</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/seattle" onclick='loading();'>Seattle</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/portland" onclick='loading();'>Portland</a></li>
+
                   </ul>
                 </li>
               </ul>
@@ -118,6 +130,10 @@ h1, h2, h3, h4 {
                       <option value="philadelphia">Philadelphia</option>
                       <option value="sanfrancisco">San Francisco</option>
                       <option value="seattle">Seattle</option>
+                      <option value="phoenix">Phoenix</option>
+                      <option value="portland">Portland</option>
+                      <option value="boston">Boston</option>
+                      <option value="chicago">Chicago</option>
                     </select>
 
                   </div>
