--- a/templates/index.html
+++ b/templates/index.html
@@ -29,9 +29,14 @@
                   <li role="presentation"><a role="menuitem" tjabindex="-1" href="/newyork/map" onclick='loading();'>New York</a></li>
                   <li role="presentation"><a role="menuitem" tabindex="-1" href="/washingtondc/map" onclick='loading();'>D.C.</a></li>
                   <li role="presentation"><a role="menuitem" tabindex="-1" href="/philadelphia/map" onclick='loading();'>Philadelphia</a></li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="/boston/map" onclick='loading();'>Boston</a></li>
+                  <li role="presentation" class="dropdown-header">USA No Coast</li>
+                  <li role="presentation"><a role="menuitem" tjabindex="-1" href="/chicago/map" onclick='loading();'>Chicago</a></li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="/phoenix/map" onclick='loading();'>Phoenix</a></li>
                   <li role="presentation" class="dropdown-header">USA West Coast</li>
                   <li role="presentation"><a role="menuitem" tjabindex="-1" href="/sanfrancisco/map" onclick='loading();'>San Francisco</a></li>
                   <li role="presentation"><a role="menuitem" tabindex="-1" href="/seattle/map" onclick='loading();'>Seattle</a></li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="/portland/map" onclick='loading();'>Portland</a></li>
                 </ul>
               </div>
       </div>
