--- a/templates/base.html
+++ b/templates/base.html
@@ -84,6 +84,7 @@ h1, h2, h3, h4 {
                     <li role="presentation" class="dropdown-header">USA No Coast</li>
                     <li role="presentation"><a role="menuitem" tjabindex="-1" href="/chicago/map" onclick='loading();'>Chicago</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/phoenix/map" onclick='loading();'>Phoenix</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/austin/map" onclick='loading();'>Austin</a></li>
                     <li role="presentation" class="dropdown-header">USA West Coast</li>
                     <li role="presentation"><a role="menuitem" tjabindex="-1" href="/sanfrancisco/map" onclick='loading();'>San Francisco</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/seattle/map" onclick='loading();'>Seattle</a></li>
@@ -106,6 +107,8 @@ h1, h2, h3, h4 {
                     <li role="presentation" class="dropdown-header">USA No Coast</li>
                     <li role="presentation"><a role="menuitem" tjabindex="-1" href="/chicago" onclick='loading();'>Chicago</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/phoenix" onclick='loading();'>Phoenix</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/austin" onclick='loading();'>Austin</a></li>
+
                     <li role="presentation" class="dropdown-header">USA West Coast</li>
                     <li role="presentation"><a role="menuitem" tjabindex="-1" href="/sanfrancisco" onclick='loading();'>San Francisco</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/seattle" onclick='loading();'>Seattle</a></li>
@@ -127,12 +130,13 @@ h1, h2, h3, h4 {
                       <option value="vancouver">Vancouver</option>
                       <option value="newyork">New York</option>
                       <option value="washingtondc">D.C.</option>
+                      <option value="boston">Boston</option>
                       <option value="philadelphia">Philadelphia</option>
                       <option value="sanfrancisco">San Francisco</option>
+                      <option value="portland">Portland</option>
                       <option value="seattle">Seattle</option>
                       <option value="phoenix">Phoenix</option>
-                      <option value="portland">Portland</option>
-                      <option value="boston">Boston</option>
+                      <option value="austin">Austin</option>
                       <option value="chicago">Chicago</option>
                     </select>
 
