--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,7 @@
                   <li role="presentation" class="dropdown-header">USA No Coast</li>
                   <li role="presentation"><a role="menuitem" tjabindex="-1" href="/chicago/map" onclick='loading();'>Chicago</a></li>
                   <li role="presentation"><a role="menuitem" tabindex="-1" href="/phoenix/map" onclick='loading();'>Phoenix</a></li>
+                  <li role="presentation"><a role="menuitem" tabindex="-1" href="/austin/map" onclick='loading();'>Austin</a></li>
                   <li role="presentation" class="dropdown-header">USA West Coast</li>
                   <li role="presentation"><a role="menuitem" tjabindex="-1" href="/sanfrancisco/map" onclick='loading();'>San Francisco</a></li>
                   <li role="presentation"><a role="menuitem" tabindex="-1" href="/seattle/map" onclick='loading();'>Seattle</a></li>
