--- a/templates/index.html
+++ b/templates/index.html
@@ -46,9 +46,9 @@
 </div>
 {% endblock %}
 
-{% block content %}
+{% block content %}<a id="about"></a>
 <div class="row" style="margin-top:5%">
-  <div class="col-md-8  col-md-offset-2"><a id="about"></a>
+  <div class="col-md-6  col-md-offset-2">
           <h2>About</h2>
           <hr>
              <p>
@@ -66,7 +66,7 @@
 
               <p>Click <a href="https://github.com/polypmer/treasure-map">
                 here</a> for the website source code or <a href="https://github.com/polypmer/freestuff-bot">here</a>
-                for the freestuff-bot script. This treasure map is written in Python 3 using the Flask framework.
+                for the freestuff-bot script. <br>This treasure map is written in Python 3 using the Flask framework.
                 <br>
               Email Fenimore, the author, here:<br>
               fenimore.love(at)workingagenda.com</p>
@@ -75,14 +75,36 @@
                   The program which calculates the coordinates for stuff-locations will sometimes crash. If you receive an error (either Internal Error 500, or a traceback error "Geocoder Service Timeout"), try refreshing the page.
                 </div>
               </div>
-              <h3 class="section-heading">Application Interface</h3>
-              <p>The default map and location page loads 10 items.
-              <ul>
-                <li>treasure.plyp.org/location</li>
-                <li>treasure.plyp.org/location/map</li>
-                <li>treasure.plyp.org/location/map/quantity</li>
-              </ul>
-                </p>
+              <a id="api"></a>
+              <div class="row">
+                <h3 class="section-heading">Application Interface</h3>
+
+                <div class="col-md-6">
+                  <p>Type your location into the url:<br><br>
+                    <div class="panel panel-info">
+                      <div class="panel-body">
+                        treasure.plyp.org/location<br>
+                        treasure.plyp.org/location/map<br>
+                        treasure.plyp.org/location/map/x<br>
+                      </div>
+                    </div>
+                    <hr>
+                    The default map loads 10 items.<br><br>
+                    The stuffs are marked by circles. The newer the posting,
+                    the bigger the circle.
+                  </p>
+                </div>
+                <div class="col-md-6 ">
+                  <img src="static/img/screenshot.png" style="width:300px;height:auto" class='img-responsive img-circle center-block'>
+                  <hr>
+                  Plotting a <small>bunch</small> of stuff (free stuffs) is doable, but the map
+                    will take many seconds to load. Above, 65 items loaded in 25 seconds.
+                  </map>
+                </div>
+              </div>
+
+
+                <a id="disclaimer"></a>
                 <h3>Disclaimer</h3>
                 <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
           IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
