--- a/templates/base.html
+++ b/templates/base.html
@@ -173,7 +173,7 @@ h1, h2, h3, h4 {
         <hr>
         {% block footer %}
         <footer class="footer">
-            <p>Treasure Map | 2015-2016</p>
+            <p>Treasure Map - <a href="another.workingagenda.com">Fenimore</a> | 2015-2016</p>
         </footer>
         {% endblock %}
     </div>
