--- a/templates/view.html
+++ b/templates/view.html
@@ -2,7 +2,7 @@
 {% block title %} - Home{% endblock %}
 {% block content %}
 <div class="row">
-  <div class="col-md-9 col-md-offset-1">
+  <div class="col-md-9 col-md-offset-1" style="margin-top:5%;">
     <h1>Recent items in {{ rlocation.title() }}</h1>
   </div>
 </div>
