got css folium link up

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,7 @@ iframe {
 .navbar-default {
   background-color: #52adda;
   border-color: #428aae;
+  background-image: none;
 }
 .navbar-default .navbar-brand {
   color: #ffffff;
