minor style changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@ h1, h2, h3, h4 {
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/#about" >Preamble</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/#api" >API</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="/#disclaimer">Disclaimer</a></li>
-
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="/cities">Complete list of Cities</a></li>
                   </ul>
                 </li>
                 <li class="dropdown">
