--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,8 @@
                (likely those with one word names).
                Currently a handful of cities have been tested, like Montreal, Toronto, Philly and New York. Try: <a href="/washingtondc">D.C.</a> or somewhere random.
                <br>
-               To try a city not listed on the navigation menu, simply enter the city name after the url (treasure.plyp.org).</p><br><a id="api"></a><hr>
+               To try a city not listed on the navigation menu, simply enter the city name after the url (treasure.plyp.org). Visit the 
+               <a href="/cities">cities</a> page for a complete list of Craiglist valid city names.</p><br><a id="api"></a><hr>
             <h3>Application Interface</h3>
                 <div class="row">
                   <div class="col-md-6">
@@ -86,7 +87,7 @@
                     <hr>
                     Plotting a <small>BUNCH</small> of stuff (free stuffs) is doable, but the map
                       will take many seconds to load. Above, 65 items loaded in 25 seconds.
-                    </map>
+
                   </div>
                 </div><br><br>
                 <div class="panel panel-warning">
@@ -111,7 +112,7 @@
                   <p>Email Fenimore,<br>
                   fenimore.love(at)workingagenda.com</p>
                   <p>Source code is  <a href="https://github.com/polypmer/treasure-map">
-                    here</a>.<br>
+                    here</a>. The Treasure Map uses the python package <a href="http://freestuffs.readthedocs.io/en/latest/">freestuffs</a>, by the same author.<br>
                     <br>
                   </p>
 
