--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
         <p>This application is a treasure map, a map of <b>free stuff</b>. <br>
           With this treasure map, <b>compare craigslist
               free stuff postings by distance.</b><br>
-               Remember, its Distance is directly
+               Remember, its Distance is inversely
               related to its value.</p>
               <div class="dropdown">
                 <a href="#" class="dropdown-toggle dropdown-welcome" data-toggle="dropdown"
@@ -53,7 +53,7 @@
           <hr>
              <p>
               With the treasure map, compare craigslist
-         free stuff postings by <b>location</b>. The distance of a free thing is directly
+         free stuff postings by <b>location</b>. The distance of a free thing is inversely
         related to its value. There are many treasures to be found, using this application, hopefully,
         you will find something near you worth giving a new home.
              </p>
@@ -62,7 +62,7 @@
                (likely those with one word names).
                Currently a handful of cities have been tested, like Montreal, Toronto, Philly and New York. Try: <a href="/washingtondc">D.C.</a> or somewhere random.
                <br>
-               To try a city not listed on the navigation menu, simply enter the city name after the url (treasure.plyp.org). Visit the 
+               To try a city not listed on the navigation menu, simply enter the city name after the url (treasure.plyp.org). Visit the
                <a href="/cities">cities</a> page for a complete list of Craiglist valid city names.</p><br><a id="api"></a><hr>
             <h3>Application Interface</h3>
                 <div class="row">
