--- a/templates/base.html
+++ b/templates/base.html
@@ -163,6 +163,7 @@ h1, h2, h3, h4 {
     {% endblock %}
 
     <div id='loading'><br><br><br><br><br><br><br>
+        The DigitalOcean droplet on which this site is hosted, takes a long time to load the maps -- if it's taking too long, try loading fewer items (try <pre>http://thetreasure.stream/newyork/map/3</pre>).
       <img class="img-responsive center-block"
         src='/static/img/loading.gif' /></div>
 
