--- a/templates/index.html
+++ b/templates/index.html
@@ -70,9 +70,9 @@
                     <p>Type your location into the url:<br><br>
                       <div class="panel panel-info">
                         <div class="panel-body">
-                          treasure.plyp.org/location<br>
-                          treasure.plyp.org/location/map<br>
-                          treasure.plyp.org/location/map/x<br>
+                          thetreasure.stream/location<br>
+                            thetreasure.stream/location/map<br>
+                            thetreasure.stream/location/map/x<br>
                         </div>
                       </div>
                       <hr>
