Fix loading message

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,8 @@ h1, h2, h3, h4 {
     cursor: wait;
     margin-left:45%;
     margin-top:100px;
-    }
+     }
+
     #map {
       margin-top:54px;
     }
@@ -164,8 +165,9 @@ h1, h2, h3, h4 {
 
     <div id='loading'><br><br><br><br><br><br><br>
         <img class="img-responsive center-block"
-             src='/static/img/loading.gif' /></div>
+             src='/static/img/loading.gif' />
         The DigitalOcean droplet on which this site is hosted, takes a long time to load the maps -- if it's taking too long, try loading fewer items try <pre>http://thetreasure.stream/newyork/map/3</pre>
+    </div>
 
 
     <div class="container page" id='content'>
